--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .DS_Store
 nvim/plugin/packer_compiled.lua
 nvim/spell/
+
+emacs/lisp/lisp
+emacs/plugins/plugins
+setups/clash/config.gfwlist
+setups/clash/config.latest
