--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,35 +1,10 @@
-[colors]
-draw_bold_text_with_bright_colors = true
-
-[colors.bright]
-black = "#585b70"
-blue = "#89b4fa"
-cyan = "#94e2d5"
-green = "#a6e3a1"
-magenta = "#f5c2e7"
-red = "#f38ba8"
-white = "#a6adc8"
-yellow = "#f9e2af"
-
-[colors.cursor]
-cursor = "#f5e0dc"
-text = "#1e1e2e"
-
-[colors.normal]
-black = "#45475a"
-blue = "#89b4fa"
-cyan = "#94e2d5"
-green = "#a6e3a1"
-magenta = "#f5c2e7"
-red = "#f38ba8"
-white = "#bac2de"
-yellow = "#f9e2af"
-
-[colors.primary]
-background = "#1e1e2e"
-foreground = "#cdd6f4"
+import = ["~/.config/alacritty/themes/themes/gruvbox_dark.toml"]
 
 [font]
+normal = { family = "Hack Nerd Font", style = "Regular" }
+bold = { family = "Hack Nerd Font", style = "Bold" }
+italic = { family = "Hack Nerd Font", style = "Italic" }
+bold_italic = { family = "Hack Nerd Font", style = "Bold Italic" }
 size = 13.0
 
 [[keyboard.bindings]]
