--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 import = ["~/.config/alacritty/themes/themes/gruvbox_dark.toml"]
 
 [font]
@@ -5,7 +6,7 @@ normal = { family = "Hack Nerd Font", style = "Regular" }
 bold = { family = "Hack Nerd Font", style = "Bold" }
 italic = { family = "Hack Nerd Font", style = "Italic" }
 bold_italic = { family = "Hack Nerd Font", style = "Bold Italic" }
-size = 13.0
+size = 16.0
 
 [[keyboard.bindings]]
 action = "Paste"
